--- a/jardineria_kompozer.html
+++ b/jardineria_kompozer.html
@@ -3,7 +3,7 @@
 
 
   
-  <meta content="text/html; charset=UTF-8" http-equiv="content-type"><title>jardineria_kompozer</title>
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type"><title>index</title>
   
 
   
